pgpool2 (3.2.2-2) UNRELEASED; urgency=low

  * Build-Depend on ruby and run tests in test/parser.

 -- Christoph Berg <myon@debian.org>  Thu, 14 Feb 2013 09:30:32 +0100

pgpool2 (3.2.2-1) experimental; urgency=low

  * New upstream release.
  * Update Vcs fields to point to git.

 -- Christoph Berg <myon@debian.org>  Tue, 12 Feb 2013 10:21:42 +0100

pgpool2 (3.2.1-1) experimental; urgency=low

  * New upstream release.

 -- Christoph Berg <myon@debian.org>  Sat, 13 Oct 2012 12:17:10 +0200

pgpool2 (3.2.0-1) experimental; urgency=low

  * New upstream release.
  * When installing a new config file, use group postgres/640.
  * Bump debhelper compat level to 9.
  * Add 9.2 to supported versions.

 -- Christoph Berg <myon@debian.org>  Fri, 12 Oct 2012 00:26:18 +0200

pgpool2 (3.1.3-3) unstable; urgency=low

  * Remove /etc/pgpool2/pgpool.conf on purge, ucf doesn't do that by itself.
    Closes: #674238.

 -- Christoph Berg <myon@debian.org>  Mon, 11 Jun 2012 18:05:32 +0200

pgpool2 (3.1.3-2) unstable; urgency=low

  * Use ucf to handle /etc/pgpool2/pgpool.conf.  Closes: #671359.
    Also, try to keep the port number used instead of calling next_free_port
    on every upgrade.

 -- Christoph Berg <myon@debian.org>  Tue, 22 May 2012 14:40:44 +0200

pgpool2 (3.1.3-1) unstable; urgency=low

  * New upstream release.

 -- Christoph Berg <myon@debian.org>  Wed, 25 Apr 2012 17:13:51 +0200

pgpool2 (3.1.2-1) unstable; urgency=low

  * New upstream release.

 -- Christoph Berg <myon@debian.org>  Tue, 20 Mar 2012 16:37:29 +0100

pgpool2 (3.1.1-2) unstable; urgency=low

  * debian/control.in
    - libpgpool0: set Breaks to solve "fails to upgrade from squeeze"
      Thanks to Hideki Yamane for the patch.  Closes: #657418.

 -- Christoph Berg <myon@debian.org>  Sat, 28 Jan 2012 20:04:00 +0100

pgpool2 (3.1.1-1) unstable; urgency=low

  * New upstream release.  Closes: #646116.
    Change the lock method of insert_lock. The previous insert_lock uses row