@@ -1,6 +1,7 @@
 pgpool2 (3.2.2-2) UNRELEASED; urgency=low
 
   * Build-Depend on ruby and run tests in test/parser.
+  * pool.h: Point DEFAULT_PID_FILE_NAME at /var/run/postgresql/.
 
  -- Christoph Berg <myon@debian.org>  Thu, 14 Feb 2013 09:30:32 +0100
 
